<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>md_ros2</name>
  <version>0.0.0</version>
  <description>The md package</description>
  <maintainer email="pjsyukizang@hanyang.ac.kr">heroehs</maintainer>

  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>md_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
